Add budget tracker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="connection_error">Connection error!</string>
     <string name="file_provider">com.example.jawlah.file_provider</string>
     <string name="landmark_lens_tile_label">Landmark lens</string>
+    <string name="mandatory">*</string>
+    <string name="transaction_date">Transaction Date</string>
+    <string name="transaction_date_hint">DD/MM/YYYY</string>
+    <string name="income">Income</string>
+    <string name="expenses">Expenses</string>
 </resources>
