--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="transaction_date_hint">DD/MM/YYYY</string>
     <string name="income">Income</string>
     <string name="expenses">Expenses</string>
+    <string name="location">Location</string>
+    <string name="details">Details</string>
 </resources>
